<resources>
    <string name="app_name">Missile Control System</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">帳號設定</string>
    <string name="title_activity_settings">Settings</string>
    <string name="NewPassword">New Password</string>
    <string name="Confirm_new_Password">Confirm new Password</string>
    <string name="user_phone">User Phone</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_Send">Send</string>
    <string name="Subject">Subject</string>
    <string name="action_add">action_add</string>


    <string name="prompt_password">prompt_password</string>
    <string name="action_sign_in_short">action_sign_in_short</string>
    <string name="action_sign_in">action_sign_in</string>
    <string name="prompt_email">prompt_email</string>
    <string name="Register">Register</string>
    <string name="Exit">Exit</string>
    <string name="User">User</string>
    <string name="prompt_User">prompt_User</string>
    <string name="switch_router">Network On/Off</string>
    <string name="toggle_debug_logging">Toggle debug logging</string>

    <string name="searching_lan">Searching LAN for UPnP devices...</string>
    <string name="enabling_router">Enabling network router...</string>
    <string name="disabling_router">Disabling network router...</string>
    <string name="enabling_debug_logging">Enabling debug logging...</string>
    <string name="disabling_debug_logging">Disabling debug logging...</string>

    <string name="registering_demo_device">Registering UPnP demo device...</string>
    <string name="create_demo_failed">Creating of demo device failed, check the log!</string>
    <string name="notification">Notification</string>
    <string name="InBox">軍情室</string>
    <string name="NewMessage">NewMessage</string>
    <string name="Drafts">Drafts</string>
    <string name="UserProfile">UserProfile</string>
    <string name="default_settings">default_settings</string>
    <string name="input_new_password">input_new_password</string>
    <string name="confirm_new_password">confirm_new_password</string>
    <string name="phone">phone</string>
    <string name="sms">等待接收驗證簡訊，可能會花幾分鐘的時間，請耐心等候</string>
    <string name="settings">settings</string>
    <string name="Receiver">Receiver</string>
    <string name="content">content</string>
    <string name="Notify">Renew</string>
    <string name="Send">Publish</string>
    <string name="Edit">更改密碼</string>
    <string name="Logout">登出</string>
    <string name="change">切換使用者</string>
    <string name="idSet">帳號設定</string>
    <string name="logout">登出</string>
    <string name="send">send</string>
    <string name="AttachedFile">選擇檔案</string>
    <string name="login">Login</string>
    <string name="lorem_ipsum">Attach File</string>
    <string name="ready">飛彈準備室</string>
    <string name="fire">飛彈發射室</string>
</resources>
