<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_teal_500_75">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="220dp"
        android:src="@drawable/missile_ver2"
        android:id="@+id/image_m2m"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/btn_no"
        android:background="@drawable/fire_btn"
        android:textStyle="bold"
        android:layout_above="@+id/btn_ed"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/btn_in"
        android:text="@string/InBox"
        android:textStyle="bold"
        android:layout_alignTop="@+id/btn_no"
        android:layout_alignStart="@+id/btn_logout" />
    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/btn_se"
        android:background="@drawable/fire_btn"
        android:textStyle="bold"
        android:layout_alignTop="@+id/btn_in"
        android:layout_alignParentEnd="true" />
    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/btn_ed"
        android:text="@string/Edit"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="43dp" />
    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/btn_logout"
        android:text="@string/Logout"
        android:textStyle="bold"
        android:layout_alignTop="@+id/btn_ed"
        android:layout_centerHorizontal="true" />


</RelativeLayout>