<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/worldbackground">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_kitkat_height"
        android:background="?colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="442dp"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="center_horizontal|top">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/usertitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="12dip"
                android:text="User Name："
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:layout_weight="0.09" />
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="---------------------------------------------------------------"
            android:textSize="18sp"
            android:paddingLeft="12dip"
            android:textColor="@drawable/block"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Password"
            android:textSize="18sp"
            android:paddingLeft="12dip"
            android:textColor="#ffffff"/>

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NewPassword"
            android:textColorHint="#ffffff"
            android:id="@+id/NewPassword"
            android:inputType="textPassword"
            android:textColor="#ffffff"/>
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Confirm_new_Password"
            android:textColorHint="#ffffff"
            android:id="@+id/NewPasswordAgain"
            android:inputType="textPassword"
            android:textColor="#ffffff"/>
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_phone"
            android:textColorHint="#ffffff"
            android:id="@+id/user_phone"
            android:inputType="textPassword"
            android:textColor="#ffffff"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="開啟點對點傳送服務 ："
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="" />
        </RelativeLayout>

        <Button
            android:id="@+id/okbutton"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:background="@drawable/button_ok" />

    </LinearLayout>


</FrameLayout>
